# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  imgui.ini
Engine/: CMakeLists.txt  Engine.h
Engine/src/Engine/: Application.cpp  Application.h  Core.h  EnginePCH.h  EntryPoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
Engine/src/Engine/Core/: Application.cpp  Application.h  Core.h  DynamicFormat.h  EnginePCH.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  Window.h
Engine/src/Engine/Debug/: Assert.h  Instrumentor.h
Engine/src/Engine/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Engine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GraphicsContext.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
Engine/src/Platform/OpenGL/: ImGui_Impl_GLFW.cpp  ImGui_Impl_GLFW.h  ImGui_Impl_OpenGL.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLCore.cpp  OpenGLCore.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
assets/shaders/: FlatColor.glsl  Texture.glsl
